--- a/source/scss/style.scss
+++ b/source/scss/style.scss
@@ -1,4 +1,11 @@
-@import 'variables';
-@import 'fonts';
-@import 'mixins';
-@import 'global';
+@import "variables";
+@import "fonts";
+@import "mixins";
+@import "global";
+@import "elements/button";
+@import "elements/link";
+@import "components/logo";
+@import "components/theme-toggle";
+@import "components/burger";
+@import "components/main-nav";
+@import "components/page-header";
