Блоки преимуществ, описания

--- a/source/scss/style.scss
+++ b/source/scss/style.scss
@@ -9,3 +9,6 @@
 @import "components/burger";
 @import "components/main-nav";
 @import "components/page-header";
+@import "components/about-us";
+@import "components/block-title";
+@import "components/advantages";
