--- a/source/scss/components/main-nav.scss
+++ b/source/scss/components/main-nav.scss
@@ -1,6 +1,6 @@
 .main-nav {
   height: 100%;
-  padding: 165px 0 0;
+  padding: 167px 0 0;
   font-size: 32px;
   line-height: 1.44;
   background-color: $blue;
@@ -25,7 +25,7 @@
 }
 
 .main-nav__item {
-  width: 52%;
+  width: 53%;
   margin: 0 auto;
 
   @include mq(768) {
@@ -34,12 +34,23 @@
   }
 
   @include mq(1200) {
-    margin: 0 48px 0 0;
+    margin: 0 49px 0 0;
+  }
+
+  &:nth-child(2) {
+    @include mq(768) {
+      order: 1;
+      margin: 0;
+    }
   }
 
   &:last-child {
     @include mq(768) {
-      margin: 0;
+      margin: 0 30px 0 0;
+    }
+
+    @include mq(1200) {
+      margin: 0 49px 0 0;
     }
   }
 }
