--- a/source/scss/components/page-header.scss
+++ b/source/scss/components/page-header.scss
@@ -38,6 +38,28 @@
       padding: 5px 0 0;
     }
   }
+
+  &--right {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    max-height: 0;
+    overflow: hidden;
+    @include transition(max-height);
+
+    @include mq(768) {
+      position: relative;
+      width: auto;
+      max-height: none;
+    }
+
+  }
+
+  &--opened {
+    max-height: 100%;
+  }
 }
 
 .page-header__logo {
@@ -80,45 +102,12 @@
   }
 }
 
-.page-header__nav-wrapper {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  max-height: 0;
-  overflow: hidden;
-  @include transition(max-height);
-
-  @include mq(768) {
-    position: relative;
-    width: auto;
-    max-height: none;
-  }
-
-  &--opened {
-    max-height: 100%;
-  }
-}
-
-.page-header__button-wrapper {
+.page-header__button {
   display: none;
+  text-align: center;
 
   @include mq(768) {
     display: block;
-    width: 100%;
-    text-align: right;
-  }
-
-  @include mq(1024) {
-    width: auto;
-  }
-}
-
-.page-header__button {
-  text-align: center;
-
-  @include mq(1024) {
     margin: 0 0 0 85px;
   }
 
