--- a/source/scss/components/block-title.scss
+++ b/source/scss/components/block-title.scss
@@ -20,6 +20,7 @@
   width: 170px;
   height: 190px;
   margin: 0 0 0 52px;
+  @include transition(fill);
 
   @include mq(768) {
     margin: 4px 2.2% 0 0;
@@ -34,6 +35,7 @@
 
 .block-title__image-path {
   fill: $white;
+  @include transition(fill);
 }
 
 .block-title__image-flag {
@@ -45,6 +47,7 @@
   font-size: 48px;
   line-height: 0.96;
   text-transform: uppercase;
+  @include transition(color);
 
   @include mq(768) {
     width: calc(63.5% - 170px);
@@ -62,11 +65,13 @@
   span {
     color: $white;
     text-shadow: 1px 0 $blue, 0 1px $blue, 0 -1px $blue, -1px 0 $blue;
+    @include transition(color);
   }
 }
 
 .block-title__promo {
   padding: 0;
+  @include transition(color);
 
   @include mq(768) {
     width: 155px;
