--- a/source/scss/components/main-nav.scss
+++ b/source/scss/components/main-nav.scss
@@ -10,17 +10,17 @@
   @include mq(768) {
     display: flex;
     flex-wrap: wrap;
+    width: auto;
     font-size: 14px;
     font-weight: 600;
     line-height: 1.94;
-    max-width: 600px;
-    padding: 3px 0 0;
+    padding: 3px 0 10px;
+    margin: 0 0 0 auto;
     background-color: transparent;
+    // outline: 1px solid red;
   }
 
   @include mq(1200) {
-    max-width: 640px;
-    padding: 5px 0 0;
     font-size: 18px;
   }
 }
@@ -31,11 +31,11 @@
 
   @include mq(768) {
     width: auto;
-    margin: 0 30px 0 0;
+    margin: 0 20px 0 0;
   }
 
   @include mq(1200) {
-    margin: 0 49px 0 0;
+
   }
 
   &:nth-child(2) {
@@ -47,11 +47,11 @@
 
   &:last-child {
     @include mq(768) {
-      margin: 0 30px 0 0;
+
     }
 
     @include mq(1200) {
-      margin: 0 49px 0 0;
+
     }
   }
 }
