--- a/source/scss/components/page-header.scss
+++ b/source/scss/components/page-header.scss
@@ -5,6 +5,7 @@
   align-items: center;
   padding: 18px 3px 0;
   box-sizing: border-box;
+  @include transition(color);
 
   @include mq(768) {
     align-items: flex-start;
@@ -18,9 +19,9 @@
 }
 
 .page-header__wrapper {
+  box-sizing: border-box;
   display: flex;
   flex-wrap: wrap;
-  box-sizing: border-box;
 
   &--left {
     align-items: center;
@@ -51,8 +52,11 @@
 
     @include mq(768) {
       position: relative;
-      width: auto;
+      flex-direction: column;
+      align-items: flex-end;
+      width: calc(100% - 245px);
       max-height: none;
+      // outline: 1px solid green;
     }
   }
 
@@ -107,7 +111,7 @@
 
   @include mq(768) {
     display: block;
-    margin: 0 0 0 85px;
+    // margin: 0 0 0 85px;
   }
 
   @include mq(1200) {
