--- a/source/scss/components/main-nav.scss
+++ b/source/scss/components/main-nav.scss
@@ -14,14 +14,19 @@
     font-size: 14px;
     font-weight: 600;
     line-height: 1.94;
-    padding: 3px 0 10px;
+    padding: 3px 0 20px;
     margin: 0 0 0 auto;
     background-color: transparent;
-    // outline: 1px solid red;
+  }
+
+  @include mq(1024) {
+    padding: 3px 0 30px;
+    font-size: 18px;
   }
 
   @include mq(1200) {
-    font-size: 18px;
+    max-width: 640px;
+    padding: 5px 0 0;
   }
 }
 
@@ -34,8 +39,8 @@
     margin: 0 20px 0 0;
   }
 
-  @include mq(1200) {
-
+  @include mq(1024) {
+    margin: 0 49px 0 0;
   }
 
   &:nth-child(2) {
@@ -47,11 +52,11 @@
 
   &:last-child {
     @include mq(768) {
-
+      margin: 0 20px 0 0;
     }
 
-    @include mq(1200) {
-
+    @include mq(1024) {
+      margin: 0 49px 0 0;
     }
   }
 }
