--- a/source/scss/components/page-header.scss
+++ b/source/scss/components/page-header.scss
@@ -1,6 +1,5 @@
 .page-header {
   display: flex;
-  flex-wrap: wrap;
   justify-content: space-between;
   align-items: center;
   padding: 18px 3px 0;
@@ -13,30 +12,25 @@
     font-size: 14px;
   }
 
-  @include mq(1200) {
+  @include mq(1024) {
     padding: 33px 0 0;
   }
 }
 
 .page-header__wrapper {
-  box-sizing: border-box;
   display: flex;
   flex-wrap: wrap;
+  box-sizing: border-box;
 
   &--left {
-    align-items: center;
-
     @include mq(768) {
       width: 170px;
     }
 
     @include mq(1024) {
-      margin: 0 auto 0 0;
-    }
-
-    @include mq(1200) {
       width: 225px;
       padding: 5px 0 0;
+      margin: 0 auto 0 0;
     }
   }
 
@@ -54,9 +48,18 @@
       position: relative;
       flex-direction: column;
       align-items: flex-end;
-      width: calc(100% - 245px);
+      width: calc(100% - 320px);
       max-height: none;
-      // outline: 1px solid green;
+    }
+
+    @include mq(1024) {
+      width: calc(100% - 350px);
+    }
+
+    @include mq(1200) {
+      flex-wrap: nowrap;
+      flex-direction: row;
+      align-items: flex-start;
     }
   }
 
@@ -74,7 +77,7 @@
     margin: 0 10px 5px 0;
   }
 
-  @include mq(1200) {
+  @include mq(1024) {
     margin: 0 27px 4px 0;
   }
 }
@@ -95,7 +98,7 @@
     line-height: 1.78;
   }
 
-  @include mq(1200) {
+  @include mq(1024) {
     padding: 2px 0 0;
     font-size: 18px;
   }
@@ -111,15 +114,18 @@
 
   @include mq(768) {
     display: block;
-    // margin: 0 0 0 85px;
+    flex-shrink: 0;
+  }
+
+  @include mq(1024) {
+    width: 190px;
+    min-height: 50px;
+    font-size: 14px;
+    line-height: 50px;
   }
 
   @include mq(1200) {
-    width: 190px;
-    min-height: 50px;
-    margin: 0 0 0 88px;
-    font-size: 14px;
-    line-height: 50px;
+    margin: 0 0 0 8.7%;
   }
 }
 
