--- a/source/scss/components/logo.scss
+++ b/source/scss/components/logo.scss
@@ -7,25 +7,20 @@
     width: 120px;
     height: 27px;
   }
+
+  &--white {
+    .logo__svg {
+      fill: $white;
+      color: $black;
+    }
+  }
 }
 
 .logo__svg {
   width: 100%;
   height: 100%;
+  color: $white;
   @include transition(fill);
-
-  &--white {
-    fill: $white;
-  }
-}
-
-.logo__letter {
-  fill: $white;
-  @include transition(fill);
-
-  &--black {
-    fill: $black;
-  }
 }
 
 .logo__text {
