--- a/source/scss/components/theme-toggle.scss
+++ b/source/scss/components/theme-toggle.scss
@@ -56,6 +56,7 @@
   transition: fill 0.3s ease-in-out, stroke 0.3s ease-in-out;
   @include transition(fill);
   @include transition(stroke);
+  outline: 1px solid red;
 
   &--rays {
     stroke: $white;
