--- a/source/scss/global.scss
+++ b/source/scss/global.scss
@@ -30,7 +30,7 @@
         }
       }
 
-      .block-title__title {
+      .about-us__title {
         color: $white;
 
         span {
@@ -39,16 +39,16 @@
         }
       }
 
-      .block-title__image {
+      .about-us__image {
         fill: $white;
         color: $black;
       }
 
-      .block-title__image-path {
+      .about-us__image-path {
         fill: $black;
       }
 
-      .block-title__promo {
+      .about-us__promo {
         color: $white;
       }
 
