--- a/source/scss/components/about-us.scss
+++ b/source/scss/components/about-us.scss
@@ -1,12 +1,113 @@
 .about-us {
-  padding: 69px 0 0;
+  padding: 69px 0 29px;
+  font-size: 24px;
+  line-height: 1.33;
   box-sizing: border-box;
 
   @include mq(768) {
+    display: flex;
     padding: 40px 0 0;
+    font-size: 20px;
+    line-height: 1.4;
   }
 
   @include mq(1200) {
-    padding: 115px 0 0;
+    padding: 115px 0 23px;
+    font-size: 40px;
+    line-height: 1.1;
+  }
+}
+
+.about-us__image {
+  width: 170px;
+  height: 190px;
+  margin: 0 0 0 52px;
+  fill: $black;
+  color: $white;
+  @include transition(fill);
+
+  @include mq(768) {
+    margin: 4px 2.2% 0 0;
+  }
+
+  @include mq(1200) {
+    width: 190px;
+    height: 215px;
+    margin: 4px 4.5% 0 6px;
+  }
+}
+
+.about-us__image-flag {
+  fill: $blue;
+}
+
+.about-us__title {
+  margin: 0 0 49px;
+  font-size: 48px;
+  line-height: 0.96;
+  text-transform: uppercase;
+  @include transition(color);
+
+  @include mq(768) {
+    width: calc(63.5% - 170px);
+    font-size: 46px;
+    line-height: 1.4;
+  }
+
+  @include mq(1200) {
+    width: 49.3%;
+    padding: 9px 0 0;
+    font-size: 70px;
+    line-height: 1;
+  }
+
+  span {
+    color: $white;
+    text-shadow: 1px 0 $blue, 0 1px $blue, 0 -1px $blue, -1px 0 $blue;
+    @include transition(color);
+  }
+}
+
+.about-us__promo {
+  padding: 0;
+  @include transition(color);
+
+  @include mq(768) {
+    width: 155px;
+    padding: 20px 0 0;
+  }
+
+  @include mq(1200) {
+    width: 310px;
+    padding: 13px 0 0;
+  }
+}
+
+.about-us__promo-item {
+  margin: 0 0 15px;
+
+  @include mq(1200) {
+    margin: 0 0 27px;
+  }
+
+  &:last-child {
+    margin: 0;
+  }
+}
+
+.about-us__promo-text {
+  margin: 0;
+
+  span {
+    color: $red2;
+    @include transition(color);
+  }
+
+  br {
+    display: block;
+
+    @include mq(768) {
+      display: none;
+    }
   }
 }
